--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -16,6 +16,10 @@
 						<a href="{{ url_for('simulations_blueprint.simulations') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-fast-forward"></i></span><span
 								class="pcoded-mtext">Simulations</span></a>
 					</li>
+					<li class="nav-item">
+						<a href="{{ url_for('home_blueprint.subscription_plans') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-shopping-cart"></i></span><span
+								class="pcoded-mtext">Subscription plans</span></a>
+					</li>
 					<li class="nav-item pcoded-hasmenu">
 						<a href="#" class="nav-link "><span class="pcoded-micon"><i class="feather icon-settings"></i></span><span
 								class="pcoded-mtext">Settings</span></a>
