--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -132,7 +132,7 @@
 				<div class="col-md-12">
 					<div class="card table-card">
 						<div class="card-header">
-							<h5>Your simulations</h5>
+							<h5>List of simulations</h5>
 						</div>
 						<div class="card-body">
                             <div class="table-responsive">
@@ -169,35 +169,32 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-{#    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>#}
     <script src="/static/assets/js/plugins/apexcharts.min.js"></script>
     <script src="/static/assets/js/pages/simulations-launcher.js"></script>
 
     <script>
-    var API1 = {{ url_for("api_blueprint.tasks_task_list") | tojson }};
-    var API2 = {{ url_for("api_blueprint.users_user_2") | tojson }};
+    var API_TASKS = {{ url_for("api_blueprint.tasks_task_2") | tojson }};
+    var API_USERS = {{ url_for("api_blueprint.users_user_2") | tojson }};
     var APIKEY = {{ current_user.apikey | tojson }};
 
     var RefreshTasksList = window.setInterval(function(){
-        list_tasks(API1);
-        //fill_in_tasks_card(API2, donut1);
-        //fill_in_quota_card(API2, donut2);
-        fill_in_user_cards(API2, donut1, donut2);
+        list_tasks(API_TASKS);
+        fill_in_user_cards(API_USERS, donut1, donut2);
     }, 2000);
 
     var donut1;
     var donut2;
     $( document ).ready(function() {
         $('button[name=reset]').trigger('click');
-        list_tasks(API1);
+        list_tasks(API_TASKS);
 
         donut1 = init_donut("customer-chart1", ['Fails', 'Success', 'Cancelled'], ["#FF5370", "#2ed8b6", "#FFB64D"]);
-        //fill_in_tasks_card(API2, donut1);
+        //fill_in_tasks_card(API_USERS, donut1);
 
         donut2 = init_donut("customer-chart2", ['Consumed', 'Remaining'], ["#000", "#EEE"], 0);
-        //fill_in_quota_card(API2, donut2);
+        //fill_in_quota_card(API_USERS, donut2);
 
-        fill_in_user_cards(API2, donut1, donut2);
+        fill_in_user_cards(API_USERS, donut1, donut2);
     })
 
 
