--- a/apps/templates/admin/tasks.html
+++ b/apps/templates/admin/tasks.html
@@ -30,7 +30,7 @@
 						</div>
 						<div class="card-body">
                             <div class="table-responsive">
-                                <div class="customer-scroll" style="height:562px;position:relative;">
+                                <div class="customer-scroll">
                                     <table class="table table-hover m-b-0" id="tasks_table">
                                         <thead>
                                             <tr>
