Refactor simulations to tasks

--- a/apps/templates/admin/tasks.html
+++ b/apps/templates/admin/tasks.html
@@ -22,7 +22,7 @@
 			<!-- [ Main Content ] start -->
             <div class="row">
 
-                <!-- [ List of ALL users simulations-page ] start -->
+                <!-- [ List of ALL users tasks-page ] start -->
 				<div class="col-md-12">
 					<div class="card table-card">
 						<div class="card-header">
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- [ List of ALL users simulations-page ] end -->
+                <!-- [ List of ALL users tasks-page ] end -->
 
             </div>
 			<!-- [ Main Content ] end -->
