--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -13,7 +13,7 @@
 								class="pcoded-mtext">Dashboard</span></a>
 					</li>
 					<li class="nav-item">
-						<a href="{{ url_for('simulations_blueprint.default_route') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-cpu"></i></span><span
+						<a href="{{ url_for('tasks_blueprint.default_route') }}" class="nav-link "><span class="pcoded-micon"><i class="feather icon-cpu"></i></span><span
 								class="pcoded-mtext">Your Simulations</span></a>
 					</li>
 					<li class="nav-item">
