--- a/apps/templates/simulations/launcher.html
+++ b/apps/templates/simulations/launcher.html
@@ -64,7 +64,7 @@
                 </div>
 				<!-- [ Create a new simulation-page ] end -->
 
-				<!-- [ simulations counters ] start -->
+				<!-- [ tasks counters ] start -->
                 <div class="col-md-12 col-xl-6">
                     <div class="row">
                         <div class="col-sm-6">
@@ -126,9 +126,9 @@
                         </div>
                     </div>
                 </div>
-				<!-- [ simulations counters ] end -->
+				<!-- [ tasks counters ] end -->
 
-                <!-- [ List of user simulations-page ] start -->
+                <!-- [ List of user tasks-page ] start -->
 				<div class="col-md-12">
 					<div class="card table-card">
 						<div class="card-header">
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- [ List of user simulations-page ] end -->
+                <!-- [ List of user tasks-page ] end -->
 
             </div>
 			<!-- [ Main Content ] end -->
